<resources>
    <string name="app_name">Trip Space</string>
    <string name="trip_begins">Trip begins!</string>
    <string name="go_menu">Go menu</string>
    <string name="log_in">Log In</string>
    <string name="log_in_title">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="you_have_no_account">You have no account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="user_is_not_logged_in">User is not logged in</string>
    <string name="no_pictures_found">No pictures found</string>
    <string name="profile">PROFILE</string>
    <string name="settings">Settings</string>
    <string name="saved">Saved</string>
    <string name="logout">Logout</string>
    <string name="day_picture">Day picture</string>
    <string name="asteroids">Asteroids</string>
    <string name="science">Science</string>
    <string name="mars_rover">Mars rover</string>
    <string name="mars_rover_big">MARS ROVER</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="asteroids_big">ASTEROIDS</string>
    <string name="magnitude">Magnitude: </string>
    <string name="diameter">Diameter: </string>
    <string name="hazardous">Hazardous </string>
    <string name="non_hazardous">Innocuous </string>
    <string name="read_more">Read more..</string>
    <string name="estimated_diameter">Estimated Diameter:</string>
    <string name="absolute_magnitude">Absolute Magnitude:</string>
    <string name="relative_velocity">Relative velocity:</string>
    <string name="close_approach_date">Close approach date:</string>
    <string name="orbiting_body">Orbiting body:</string>
    <string name="km_s">km/s</string>
    <string name="go_to_read_more">Go to read more..</string>
    <string name="repository">REPOSITORY</string>
    <string name="experiment">Experiment</string>
    <string name="payload">Payload</string>
    <string name="results_for_your_request">Results for your request. Click on pic to learn more</string>
    <string name="f">)</string>
    <string name="about_picture">About picture</string>
    <string name="send_to">Send to</string>
    <string name="picture_of_the_day">Picture of the Day</string>
    <string name="new_picture_of_the_day">New Picture of the Day!</string>
    <string name="astronomy">Astronomy</string>
    <string name="galaxy">Galaxy</string>
    <string name="search_the_moon">Search the Moon</string>
    <string name="there_is_no_matching_information_for_your_request">There is no matching information for your request</string>
    <string name="search_for_e_g_biocore">Search for.. (e.g. Biocore)</string>
    <string name="find_the_payload_or_experiment_you_want_to_read_about">find the payload or experiment you want to read about</string>
    <string name="nothing_has_been_added_yet">Nothing has been added yet</string>
    <string name="search">Search</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_start_date">Enter start</string>
    <string name="enter_end_date">Enter end</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="return_to_log_in_page">Return to Log In Page</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>

</resources>