<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_description">

    <TextView
        android:id="@+id/close_approach_date_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/regular_style_text"
        android:textSize="@dimen/text_reg_size"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/close_approach_date" />
    <TextView
        android:id="@+id/relative_velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/regular_style_text"
        android:textSize="@dimen/text_reg_size"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/close_approach_date_full"
        tools:text="@string/relative_velocity" />
    <TextView
        android:id="@+id/orbiting_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/regular_style_text"
        android:textSize="@dimen/text_reg_size"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/relative_velocity"
        tools:text="@string/orbiting_body" />

</androidx.constraintlayout.widget.ConstraintLayout>