<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bck">
    <ImageView
        android:id="@+id/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/stars"/>
    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAppearance="@style/regular_style_text"
        android:textSize="@dimen/text_46sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_100"/>
    <EditText
        android:id="@+id/input_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/input"
        android:hint="@string/username"
        android:textSize="@dimen/text_reg_size"
        style="@style/input_text"
        android:layout_marginTop="@dimen/margin_40"
        android:paddingStart="@dimen/padding_10"
        />

    <EditText
        android:id="@+id/input_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_login"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/input"
        android:hint="@string/password"
        android:textSize="@dimen/text_reg_size"
        style="@style/input_text"
        android:layout_marginTop="@dimen/margin_40"
        android:paddingStart="@dimen/padding_10"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/yellow_btn"
        android:textSize="@dimen/text_button_size"
        app:layout_constraintTop_toBottomOf="@id/input_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/sign_up_button"
        android:textAppearance="@style/bold_style_black"/>
    <TextView
        android:id="@+id/signIn_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return to Log In Page"
        android:textAppearance="@style/regular_style_text"
        android:textSize="@dimen/text_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_marginTop="@dimen/margin_20"/>
</androidx.constraintlayout.widget.ConstraintLayout>