<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        android:textAppearance="@style/bold_style_text"
        android:textSize="@dimen/text_46sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description"
        android:layout_marginBottom="@dimen/margin_40"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_the_payload_or_experiment_you_want_to_read_about"
        android:textAppearance="@style/regular_style_text"
        android:textSize="@dimen/text_small_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/input_search"
        android:layout_marginBottom="@dimen/margin_14"/>
    <EditText
        android:id="@+id/input_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/search_input"
        android:hint="@string/search_for_e_g_biocore"
        android:textSize="@dimen/text_reg_size"
        style="@style/input_text"
        android:layout_marginTop="@dimen/margin_40"
        android:paddingStart="@dimen/padding_10"
        />

    <TextView
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_is_no_matching_information_for_your_request"
        android:textAppearance="@style/regular_style_text"
        android:textSize="@dimen/text_reg_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_search"
        android:layout_marginTop="@dimen/margin_20"
        android:visibility="gone"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/popupWindowStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_search"
        android:indeterminate="true"
        android:indeterminateTint="#FFFFFF"
        android:layout_marginTop="@dimen/margin_8"
        android:visibility="gone" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="@dimen/_20dp"
        android:layout_height="@dimen/_20dp"
        android:background="@drawable/search"
        app:layout_constraintTop_toTopOf="@id/input_search"
        app:layout_constraintEnd_toEndOf="@id/input_search"
        android:layout_marginTop="@dimen/margin_14"
        android:layout_marginEnd="@dimen/margin_14"/>
    <ImageView
        android:id="@+id/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/stars"/>
</androidx.constraintlayout.widget.ConstraintLayout>