<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saved_pictures"
            android:layout_width="@dimen/small_btn_w"
            android:layout_height="@dimen/small_btn_h"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_40"
            android:background="@drawable/saved_white"
            android:text="@string/day_picture"
            android:textAppearance="@style/bold_style_black"
            android:textSize="@dimen/text_button_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saved_asteroids"
            android:layout_width="@dimen/small_btn_w"
            android:layout_height="@dimen/small_btn_h"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_40"
            android:background="@drawable/saved_gray"
            android:text="@string/asteroids"
            android:textAppearance="@style/regular_style_text"
            android:textSize="@dimen/text_button_size"
            app:layout_constraintStart_toEndOf="@id/saved_pictures"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saved_repository"
            android:layout_width="@dimen/small_btn_w"
            android:layout_height="@dimen/small_btn_h"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_40"
            android:background="@drawable/saved_gray"
            android:text="@string/science"
            android:textAppearance="@style/regular_style_text"
            android:textSize="@dimen/text_button_size"
            app:layout_constraintStart_toEndOf="@id/saved_asteroids"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saved_rover"
            android:layout_width="@dimen/small_btn_w"
            android:layout_height="@dimen/small_btn_h"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_40"
            android:background="@drawable/saved_gray"
            android:text="@string/mars_rover"
            android:textAppearance="@style/regular_style_text"
            android:textSize="@dimen/text_button_size"
            app:layout_constraintStart_toEndOf="@id/saved_repository"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stars"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saved_pictures"
        tools:listitem="@layout/item_picture" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
