<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bck">

        <ImageView
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stars"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/im_height_350"
            android:background="@drawable/strn"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/to_home"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/to_home"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/image" />

        <ImageView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:textAppearance="@style/bold_style_text"
            android:textSize="@dimen/title_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/description"
            tools:text="@string/app_name" />

        <ImageView
            android:id="@+id/pottent_hazardous"
            android:layout_width="@dimen/h_20dp"
            android:layout_height="@dimen/h_20dp"
            android:layout_marginStart="@dimen/margin_8"
            android:background="@drawable/comet"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintTop_toTopOf="@id/title" />

        <TextView
            android:id="@+id/absolute_magnitude_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:textAppearance="@style/regular_style_text"
            android:textSize="@dimen/text_reg_size"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="@string/absolute_magnitude" />


        <TextView
            android:id="@+id/estimated_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_8"
            android:scrollHorizontally="false"
            android:textAppearance="@style/regular_style_text"
            android:textSize="@dimen/text_reg_size"
            app:layout_constraintStart_toStartOf="@id/absolute_magnitude_h"
            app:layout_constraintTop_toTopOf="@id/absolute_magnitude_h"
            tools:text="@string/estimated_diameter" />

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_8"
            android:scrollHorizontally="false"
            android:text="@string/go_to_read_more"
            android:textAppearance="@style/bold_style_text"
            android:textSize="@dimen/text_reg_size"
            app:layout_constraintStart_toStartOf="@id/estimated_diameter"
            app:layout_constraintTop_toTopOf="@id/estimated_diameter" />

        <TextView
            android:id="@+id/close_approach_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_40"
            android:text="@string/close_approach_date"
            android:textAppearance="@style/bold_style_text"
            android:textSize="@dimen/text_reg_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/url" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/close_approach_date"
            app:layout_constraintTop_toBottomOf="@id/close_approach_date"
            tools:listitem="@layout/item_close_approach_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>